feat:精卫查询初步完成，支持墨西哥Mysql